--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,12 +1,10 @@
 -r requirements.txt
 
 bumpversion==0.5.3
-wheel==0.23.0
+wheel==0.29.0
 watchdog==0.8.3
-flake8==2.4.1
-tox==2.1.1
-coverage==4.0
-Sphinx==1.3.1
-cryptography==1.0.1
-PyYAML==3.11
-pytest
+flake8==2.5.4
+tox==2.3.1
+coverage==4.0.3
+Sphinx==1.3.6
+pytest==2.9.0
