--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,11 +1,11 @@
 -r requirements.txt
 
-bumpversion==0.5.3
-wheel==0.29.0
-watchdog==0.8.3
-flake8==2.5.4
-tox==2.3.1
-coverage==4.0.3
-Sphinx==1.3.6
+bumpversion
+wheel
+watchdog
+flake8
+tox
+coverage
+Sphinx
 pytest
 pytest-cov
