--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py34, py35, py36
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/multiaddr
-commands = py.test --cov=./
+commands = pytest --cov=./
 
 ; If you want to make tox run the tests with the same versions, create a
 ; requirements.txt with the pinned versions and uncomment the following lines:
