--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: false
 language: python
 matrix:
   include:
@@ -8,6 +7,9 @@ matrix:
     env: TOXENV=py35
   - python: 3.6
     env: TOXENV=py36
+  - python: 3.7
+    env: TOXENV=py37
+    dist: xenial
 
 install:
 - pip install tox
