Revert "feat: adding DNSADDR protocol"

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,9 +30,6 @@ dependencies = [
     "idna",
     "py-cid",
     "py-multicodec >= 0.2.0",
-    "aiodns>=3.0.0",
-    "trio>=0.26.0",
-    "trio-typing>=0.0.4",
 ]
 
 [project.urls]
@@ -54,11 +51,7 @@ dev = [
     "pyright",
     "pre-commit",
 ]
-test = [
-    "pytest>=7.0.0",
-    "pytest-trio>=0.5.2",
-    "pytest-cov>=4.0.0",
-]
+test = ["pytest"]
 
 [tool.setuptools]
 packages = ["multiaddr"]
