--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ Download = "https://github.com/multiformats/py-multiaddr/tarball/0.0.9"
 [project.optional-dependencies]
 dev = [
     "Sphinx>=5.0.0",
+    "build>=0.9.0",
     "bump_my_version>=1.2.0",
     "coverage>=6.5.0",
     "pre-commit",
