update tox.ini and run ruff format

--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,14 @@
 [tox]
-envlist = py311,py313
+envlist = py{39,310,311,312,313}
 
 [testenv]
 deps =
     pytest
     pytest-cov
+    pytest-trio
+    trio
     ruff
 commands =
     pytest {posargs:tests}
     ruff check .
     ruff format --check .
-
-
