--- a/tox.ini
+++ b/tox.ini
@@ -12,3 +12,17 @@ commands =
     pytest {posargs:tests}
     ruff check .
     ruff format --check .
+
+[testenv:py{310,311,312,313}-lint]
+deps=pre-commit
+extras=
+    dev
+commands=
+    pre-commit install
+    pre-commit run --all-files --show-diff-on-failure
+
+[testenv:docs]
+extras=
+    .
+commands =
+    make docs-ci
