--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,21 @@
 [tox]
-envlist = py{310,311,312,313}
+envlist=
+    py{310,311,312,313}-core
+    py{310,311,312,313}-lint
+    docs
 
 [testenv]
-deps =
+deps=
     pytest
     pytest-cov
     pytest-trio
     trio
     ruff
-commands =
-    pytest {posargs:tests}
-    ruff check .
-    ruff format --check .
+commands=
+    core: pytest {posargs:tests}
+    lint: ruff check .
+    lint: ruff format --check .
+    docs: make docs-ci
 
 [testenv:py{310,311,312,313}-lint]
 deps=pre-commit
