use pre-commit checks in ci instead of just ruff

--- a/tox.ini
+++ b/tox.ini
@@ -13,8 +13,8 @@ deps=
     ruff
 commands=
     core: pytest {posargs:tests}
-    lint: ruff check .
-    lint: ruff format --check .
+    ; lint: ruff check .
+    ; lint: ruff format --check .
     docs: make docs-ci
 
 [testenv:py{310,311,312,313}-lint]
