--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.10", "3.11", "3.12", "3.13"]
-        toxenv: [core, lint, docs]
+        toxenv: [core, lint]
         include:
           - python-version: "3.10"
             toxenv: docs
