--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,9 @@ envlist=
 
 [testenv]
 deps=
-    dev
     trio
+extras=
+    dev
 commands=
     core: pytest {posargs:tests}
     docs: make docs-ci
