--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -24,18 +24,18 @@ jobs:
       fail-fast: false
     steps:
       - env:
-          python: ${{ matrix.python }}
+          python-version: ${{ matrix.python-version }}
           toxenv: ${{ matrix.toxenv }}
         run: |
           if [[ "$toxenv" == 'docs' ]]; then
             echo 'TOXENV=docs' | tee -a $GITHUB_ENV
           else
-            echo "TOXENV=py${python}-${toxenv}" | tr -d '.' | tee -a $GITHUB_ENV
+            echo "TOXENV=py${python-version}-${toxenv}" | tr -d '.' | tee -a "$GITHUB_ENV"
           fi
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python }}
+          python-version: ${{ matrix.python-version }}
       - run: |
           python -m pip install --upgrade pip
           python -m pip install tox
