--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ commands=
 [testenv:py{310,311,312,313}-lint]
 deps=pre-commit
 commands=
-    pre-commit install
+    ; pre-commit install
     pre-commit run --all-files --show-diff-on-failure
 
 [testenv:docs]
