--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,26 @@
 [tox]
-envlist = py311,py313
+envlist=
+    py{310,311,312,313}-core
+    py{310,311,312,313}-lint
+    docs
 
 [testenv]
-deps =
-    pytest
-    pytest-cov
-    ruff
+deps=
+    trio
+extras=
+    dev
+commands=
+    core: pytest {posargs:tests}
+    docs: make docs-ci
+
+[testenv:py{310,311,312,313}-lint]
+deps=pre-commit
+commands=
+    ; pre-commit install
+    pre-commit run --all-files --show-diff-on-failure
+
+[testenv:docs]
 commands =
-    pytest {posargs:tests}
-    ruff check .
-    ruff format --check .
-
-
+    make docs-ci
+allowlist_externals=
+    make
