Add py-libp2p-style typecheck functionality and PR workflow
- Add make help and make pr targets
- Add make fix and make typecheck targets
- Add mypy and pyrefly to dev dependencies
- Add type stubs for netaddr and psutil
- Update pre-commit config with local typecheck hooks
- Update setup target to use pyproject.toml dev dependencies
- Match py-libp2p workflow: clean → fix → lint → typecheck → test

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ dependencies = [
     "idna",
     "netaddr",
     "psutil",
-    "py-cid @ git+https://github.com/acul71/py-cid-fork.git",
+    #"py-cid @ git+https://github.com/acul71/py-cid-fork.git",
+    "py-cid @ git+https://github.com/ipld/py-cid@c8f5e8b9d78a998e2dbf5694f0ca75b1f1a4db36",
     "py-multicodec >= 0.2.0",
     "trio-typing>=0.0.4",
     "trio>=0.26.0",
@@ -50,7 +51,9 @@ dev = [
     "build>=0.9.0",
     "bump_my_version>=1.2.0",
     "coverage>=6.5.0",
+    "mypy",
     "pre-commit",
+    "pyrefly",
     "pyright",
     "pytest",
     "pytest-cov",
@@ -60,6 +63,8 @@ dev = [
     "towncrier>=24,<25",
     "tox>=4.10.0",
     "twine",
+    "types-netaddr",
+    "types-psutil",
     "watchdog>=3.0.0",
     "wheel>=0.31.0",
 ]
