--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,8 +18,19 @@ repos:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
       - id: ruff-format
-  - repo: https://github.com/northisup/pyright-pretty
-    rev: v0.1.0
+  - repo: local
     hooks:
-      - id: pyright-pretty
-        args: [--show-summary]
+      - id: mypy-local
+        name: run mypy with all dev dependencies present
+        entry: mypy -p multiaddr
+        language: system
+        always_run: true
+        pass_filenames: false
+  - repo: local
+    hooks:
+      - id: pyrefly-local
+        name: run pyrefly typecheck locally
+        entry: pyrefly check
+        language: system
+        always_run: true
+        pass_filenames: false
