Update py-cid dependency to use specific git commit

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,10 @@ dependencies = [
     "netaddr",
     "psutil",
     #"py-cid @ git+https://github.com/acul71/py-cid-fork.git",
-    "py-cid @ git+https://github.com/ipld/py-cid@6c5d62f ",
+    #"py-cid @ git+https://github.com/ipld/py-cid@6c5d62f ",
+    #"py-cid @ git+https://github.com/ipld/py-cid@c8f5e8b9d78a998e2dbf5694f0ca75b1f1a4db36",
+    #"py-cid-acul71-test==0.3.0",
+    "py-cid @ git+https://github.com/ipld/py-cid@807b8ba541d4367d92ac541e198e4b67e101ec2e",
     "py-multicodec >= 0.2.0",
     "trio-typing>=0.0.4",
     "trio>=0.26.0",
