fix: updated py-cid to pypi new package 0.3.1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,9 +33,7 @@ dependencies = [
     "idna",
     "netaddr",
     "psutil",
-    #"py-cid @ git+https://github.com/acul71/py-cid-fork.git",
-    #"py-cid @ git+https://github.com/ipld/py-cid.git@6c5d62f865e380116689d11348a4be82fe4f2703",
-    "py-cid @ git+https://github.com/ipld/py-cid@807b8ba541d4367d92ac541e198e4b67e101ec2e",
+    "py-cid >= 0.3.1",
     "py-multicodec >= 0.2.0",
     "trio-typing>=0.0.4",
     "trio>=0.26.0",
