--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "multiaddr"
-version = "0.0.9"
+version = "0.0.10"
 description = "Python implementation of jbenet's multiaddr"
 readme = "README.rst"
 authors = [{ name = "Steven Buss", email = "steven.buss@gmail.com" }]
@@ -135,7 +135,7 @@ name = "Removals"
 showcontent = true
 
 [tool.bumpversion]
-current_version = "0.0.9"
+current_version = "0.0.10"
 parse = """
     (?P<major>\\d+)
     \\.(?P<minor>\\d+)
@@ -188,8 +188,8 @@ search = "__version__ = \"{current_version}\""
 replace = "__version__ = \"{new_version}\""
 
 [[tool.bumpversion.files]]
-search = "Download = 'https://github.com/multiformats/py-multiaddr/tarball/{current_version}'"
-replace = "Download = 'https://github.com/multiformats/py-multiaddr/tarball/{new_version}'"
+search = "Download = \"https://github.com/multiformats/py-multiaddr/tarball/{current_version}\""
+replace = "Download = \"https://github.com/multiformats/py-multiaddr/tarball/{new_version}\""
 
 [tool.mypy]
 python_version = "3.10"
