--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -39,3 +39,28 @@ jobs:
           python -m pip install "tox>=4.10"
       - run: |
           python -m tox run -r
+
+  windows:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        python-version: ["3.10", "3.11", "3.12", "3.13"]
+        toxenv: [core, lint]
+      fail-fast: false
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install "tox>=4.10"
+      - name: Test with tox
+        shell: bash
+        run: |
+          python_version="${{ matrix.python-version }}"
+          toxenv="${{ matrix.toxenv }}"
+          echo "TOXENV=py${python_version}-${toxenv}" | tr -d '.' | tee -a "$GITHUB_ENV"
+          python -m tox run -r
