--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "multiaddr"
-version = "0.0.9"
+version = "0.0.10"
 description = "Python implementation of jbenet's multiaddr"
 readme = "README.rst"
 authors = [{ name = "Steven Buss", email = "steven.buss@gmail.com" }]
@@ -33,7 +33,7 @@ dependencies = [
     "idna",
     "netaddr",
     "psutil",
-    "py-cid @ git+https://github.com/ipld/py-cid.git@6c5d62f865e380116689d11348a4be82fe4f2703",
+    "py-cid >= 0.3.1",
     "py-multicodec >= 0.2.0",
     "trio-typing>=0.0.4",
     "trio>=0.26.0",
@@ -42,7 +42,7 @@ dependencies = [
 
 [project.urls]
 Homepage = "https://github.com/multiformats/py-multiaddr"
-Download = "https://github.com/multiformats/py-multiaddr/tarball/0.0.9"
+Download = "https://github.com/multiformats/py-multiaddr/tarball/0.0.10"
 
 [project.optional-dependencies]
 dev = [
@@ -50,7 +50,9 @@ dev = [
     "build>=0.9.0",
     "bump_my_version>=1.2.0",
     "coverage>=6.5.0",
+    "mypy",
     "pre-commit",
+    "pyrefly",
     "pyright",
     "pytest",
     "pytest-cov",
@@ -60,6 +62,8 @@ dev = [
     "towncrier>=24,<25",
     "tox>=4.10.0",
     "twine",
+    "types-netaddr",
+    "types-psutil",
     "watchdog>=3.0.0",
     "wheel>=0.31.0",
 ]
@@ -131,7 +135,7 @@ name = "Removals"
 showcontent = true
 
 [tool.bumpversion]
-current_version = "0.0.9"
+current_version = "0.0.10"
 parse = """
     (?P<major>\\d+)
     \\.(?P<minor>\\d+)
@@ -174,11 +178,29 @@ search = "version = \"{current_version}\""
 replace = "version = \"{new_version}\""
 
 [[tool.bumpversion.files]]
-filename = "pyproject.toml"
-search = "current_version = \"{current_version}\""
-replace = "current_version = \"{new_version}\""
-
-[[tool.bumpversion.files]]
 filename = "multiaddr/__init__.py"
 search = "__version__ = \"{current_version}\""
 replace = "__version__ = \"{new_version}\""
+
+[[tool.bumpversion.files]]
+filename = "pyproject.toml"
+search = "Download = \"https://github.com/multiformats/py-multiaddr/tarball/{current_version}\""
+replace = "Download = \"https://github.com/multiformats/py-multiaddr/tarball/{new_version}\""
+
+[tool.mypy]
+python_version = "3.10"
+check_untyped_defs = true
+disallow_any_generics = true
+disallow_incomplete_defs = true
+disallow_subclassing_any = false
+disallow_untyped_calls = true
+disallow_untyped_decorators = true
+disallow_untyped_defs = true
+ignore_missing_imports = true
+incremental = false
+strict_equality = true
+strict_optional = true
+warn_redundant_casts = true
+warn_return_any = false
+warn_unused_configs = true
+warn_unused_ignores = false
